tests/stable/function/compile_fail/undefined_precondition.rs
use pre::pre;

fn foo() {}

#[pre]
fn main() {
    #[assure("must be bar", reason = "is bar")]
    foo()
}
